add copyright notice

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="main">b</div>
         <div class="sub">c</div>
         <div class="footer">
-            <div class="copyright"></div>
+            <div class="copyright">
+                <div id="copy-text">Copyright © Jayden Dudeguy</div>
+            </div>
         </div>
     </div>
 
